plugins {
    id 'java'
    id 'me.champeau.jmh' version '0.7.2'
}

group = 'com.laze'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs = ['resources']
        }
    }
}

dependencies {
    jmh 'org.openjdk.jmh:jmh-core:1.37'
    jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}